--- a/index.html
+++ b/index.html
@@ -3,46 +3,51 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Map Quiz - Choose Region</title>
+  <title>Map Quiz - Choose a Region</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom, #e0eafc, #cfdef3);
+      margin: 0;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      margin: 0;
     }
     h1 {
-      margin-bottom: 30px;
+      color: #333;
+      margin-bottom: 40px;
     }
     .btn-container {
       display: flex;
       gap: 20px;
+      flex-wrap: wrap;
+      justify-content: center;
     }
     .map-btn {
-      padding: 15px 25px;
-      font-size: 1.1em;
+      padding: 15px 30px;
+      font-size: 1.2em;
       cursor: pointer;
       border: none;
-      border-radius: 6px;
+      border-radius: 10px;
       background-color: #0077cc;
       color: white;
-      transition: background 0.3s;
+      transition: background 0.3s, transform 0.2s;
       text-decoration: none;
     }
     .map-btn:hover {
       background-color: #005fa3;
+      transform: scale(1.05);
     }
   </style>
 </head>
 <body>
-  <h1>Choose a Map to Play</h1>
+  <h1>🗺️ Choose a Map to Play</h1>
   <div class="btn-container">
     <a href="index_usa.html" class="map-btn">🇺🇸 United States</a>
-    <a href="index-europe-asia.html" class="map-btn">🌍 Europe & Asia</a>
+    <a href="index-europe.html" class="map-btn">🇪🇺 Europe</a>
+    <a href="index-asia.html" class="map-btn">🌏 Asia (soon)</a>
   </div>
 </body>
 </html>
