--- a/index-europe.html
+++ b/index-europe.html
@@ -138,8 +138,96 @@
   <div id="victory-message" style="display: none; font-size: 1.2em; color: green; margin-top: 10px;"></div>
 
   <script>
-    // הקוד שלך כמו שהוא נשאר - עם nameMap וכו'
-    // רק עיצוב השתנה פה
+    const nameMap = {
+      "AL": "Albania", "AT": "Austria", "BE": "Belgium", "BG": "Bulgaria", "HR": "Croatia",
+      "CY": "Cyprus", "CZ": "Czech Republic", "DK": "Denmark", "EE": "Estonia", "FI": "Finland",
+      "FR": "France", "DE": "Germany", "GR": "Greece", "HU": "Hungary", "IS": "Iceland",
+      "IE": "Ireland", "IT": "Italy", "LV": "Latvia", "LT": "Lithuania", "LU": "Luxembourg",
+      "MT": "Malta", "NL": "Netherlands", "NO": "Norway", "PL": "Poland", "PT": "Portugal",
+      "RO": "Romania", "SK": "Slovakia", "SI": "Slovenia", "ES": "Spain", "SE": "Sweden",
+      "CH": "Switzerland", "GB": "United Kingdom", "UA": "Ukraine", "RS": "Serbia", "BA": "Bosnia and Herzegovina",
+      "MD": "Moldova", "MK": "North Macedonia", "BY": "Belarus", "RU": "Russia", "TR": "Turkey",
+      "AZ": "Azerbaijan", "AM": "Armenia", "IL": "Israel", "LI": "Liechtenstein", "FO": "Faroe Islands",
+      "AD": "Andorra", "MC": "Monaco", "ME": "Montenegro", "SM": "San Marino", "VA": "Vatican City"
+    };
+
+    const mapContainer = d3.select('#map-container');
+    const svg = d3.select('svg');
+    const width = mapContainer.node().getBoundingClientRect().width;
+    const height = mapContainer.node().getBoundingClientRect().height;
+
+    const projection = d3.geoMercator()
+      .center([20, 55])
+      .scale(600)
+      .translate([width / 2, height / 2]);
+
+    const path = d3.geoPath().projection(projection);
+
+    let selectedCountry = null;
+    let score = 0;
+    let attempts = 0;
+    let correctGuesses = 0;
+
+    d3.json('data/europe.topojson').then(data => {
+      const countries = topojson.feature(data, data.objects.europe).features;
+
+      const countryPaths = svg.selectAll('path')
+        .data(countries)
+        .enter().append('path')
+        .attr('d', path)
+        .attr('id', d => 'country-' + d.id);
+
+      const countryList = d3.select('#country-list');
+      const countryNames = countries.map(d => ({
+        id: d.id,
+        name: nameMap[d.id] || d.id,
+        centroid: path.centroid(d)
+      }));
+
+      const countryItems = countryList.selectAll('li')
+        .data(countryNames)
+        .enter().append('li')
+        .attr('id', d => 'country-' + d.id)
+        .text(d => d.name)
+        .on('click', function(d) {
+          if (!d3.select(this).classed('matched')) {
+            countryList.selectAll('li').classed('selected', false);
+            selectedCountry = d;
+            d3.select(this).classed('selected', true);
+            d3.select('#feedback').text('');
+          }
+        });
+
+      countryPaths.on('click', function(d) {
+        const feedbackElement = d3.select('#feedback');
+        if (selectedCountry) {
+          attempts++;
+          d3.select('#attempts').text(attempts);
+          if (nameMap[d.id] === selectedCountry.name) {
+            score += 10;
+            correctGuesses++;
+            d3.select('#score').text(score);
+            feedbackElement.text('Correct!').classed('error', false);
+            d3.select(this).classed('guessed', true).style('pointer-events', 'none');
+            const matchedItem = d3.select('#country-' + selectedCountry.id);
+            matchedItem.classed('matched', true).classed('selected', false).on('click', null);
+            selectedCountry = null;
+
+            if (correctGuesses === countryNames.length) {
+              d3.select('#victory-message')
+                .text(`🎉 You won! Final score: ${score} in ${attempts} attempts.`)
+                .style('display', 'block');
+            }
+          } else {
+            feedbackElement.text('Incorrect! Try again.').classed('error', true);
+          }
+        } else {
+          feedbackElement.text('Please select a country name first.').classed('error', true);
+        }
+      });
+
+      d3.select('#restart-button').on('click', () => location.reload());
+    });
   </script>
 </body>
 </html>
