--- a/index-europe.html
+++ b/index-europe.html
@@ -14,23 +14,26 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      background-color: #f9f9f9;
+      background-color: #0a0a0a;
+      color: #fff;
     }
 
     #map-container {
-  width: 100%;
-  position: relative;
-  padding-top: 66.66%; /* יחס גובה-רוחב 3:2 */
-}
+      width: 100%;
+      max-width: 900px;
+      aspect-ratio: 3 / 2;
+      position: relative;
+      background: #0a0a0a;
+    }
 
-svg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 1px solid #ccc;
-}
+    svg {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 1px solid #ccc;
+    }
 
     path {
       fill: #f0f0f0;
@@ -65,8 +68,8 @@ svg {
     }
 
     #country-list li {
-      background-color: #fff;
-      border: 1px solid #ddd;
+      background-color: #000;
+      border: 1px solid #aaa;
       padding: 8px 12px;
       cursor: pointer;
       border-radius: 5px;
@@ -123,7 +126,7 @@ svg {
     <strong>Attempts:</strong> <span id="attempts">0</span>
   </div>
   <button id="restart-button">Restart Game</button>
-  <div id="victory-message" style="display: none; font-size: 1.2em; color: green; margin-top: 10px;"></div>
+  <div id="victory-message" style="display: none; font-size: 1.2em; color: lightgreen; margin-top: 10px;"></div>
 
   <script>
     const nameMap = {
@@ -145,7 +148,7 @@ svg {
 
     const projection = d3.geoMercator()
       .center([20, 55])
-      .scale(600)
+      .scale(500)
       .translate([width / 2, height / 2]);
 
     const path = d3.geoPath().projection(projection);
